<resources>
    <string name="app_name" translatable="false">LANChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_hello">Hello, %s</string>
    <string name="nav_header_people_around">People around: %d</string>

    <string name="global_chat">Global chat</string>
    <string name="people">People</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="type_here">Type message here&#8230;</string>
    <string name="button_send">Send</string>

    <string name="preference_profile">Profile</string>
    <string name="settings_name">Name</string>
    <string name="settings_name_summary">Change your name</string>
    <string name="default_name">Anonym</string>

    <string name="preference_network">Network</string>
    <string name="max_clients_summary">Maximum clients for server mode</string>
    <string name="max_clients">Max clients</string>

    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="notification_ringtone">Notification ringtone</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="enable_led">Enable LED</string>

    <string name="new_room">New room</string>
    <string name="room_name">Room name</string>
    <string name="_private">Private</string>
    <string name="create_room">Create room</string>
    <string name="add_people">Add people</string>

    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_picture_summary">Change profile picture</string>

    <string name="choose_action">Choose an action</string>
    <string name="delete_message">Delete message</string>
    <string name="copy_text">Copy text</string>
    <string name="delete_messages">Delete messages</string>
    <string name="delete_room">Delete room</string>
    <string name="you_sure">You sure?</string>
    <string name="rename_room">Rename room</string>
    <string name="type_new_name">Type new name</string>
    <string name="incorrect_name">Incorrect name</string>

    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="require_wifi">Application require Wi-Fi connection. Please, connect to the access point and restart</string>
    <string name="cant_create_room">Can\'t create more than 1000 rooms</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_picture">Take a picture</string>
</resources>
