<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_profile">
        <EditTextPreference
            android:key="name"
            android:summary="@string/settings_name_summary"
            android:title="@string/settings_name"
            android:defaultValue="@string/default_name"/>
        <Preference
            android:key="profile_picture"
            android:title="@string/profile_picture"
            android:summary="@string/profile_picture_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_network">
        <EditTextPreference
            android:key="max_clients"
            android:summary="@string/max_clients_summary"
            android:title="@string/max_clients"
            android:defaultValue="10"
            android:numeric="integer"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:key="enable_notifications"
            android:title="@string/enable_notifications" />
        <Preference
            android:key="notification_ringtone"
            android:title="@string/notification_ringtone"/>
        <CheckBoxPreference
            android:key="enable_vibration"
            android:title="@string/enable_vibration" />
        <CheckBoxPreference
            android:key="enable_led"
            android:title="@string/enable_led" />
    </PreferenceCategory>
</PreferenceScreen>