<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawerMenuMessagingGroup">
        <item
            android:id="@+id/drawerMenuGlobalChat"
            android:icon="@drawable/ic_message_text"
            android:title="@string/global_chat" />
        <item
            android:id="@+id/drawerMenuPeoples"
            android:icon="@drawable/ic_account_multiple"
            android:title="@string/people" />
        <item
            android:id="@+id/drawerMenuRooms"
            android:icon="@drawable/ic_border_all"
            android:title="@string/rooms" />
    </group>

    <group
        android:id="@+id/drawerMenuOtherGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawerMenuSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/drawerMenuExit"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/exit" />
    </group>



</menu>
